# test

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  calibration  calibration.cpp  cmake_install.cmake  cvtest.cpp  default.xml  demo  demo.cpp  meanfilter  meanfilter.cpp  output.mov  play_vid  play_vid.cpp  save_vid  save_vid.cpp  undistorted.cpp  viztest  viztest.cpp
record_all/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
record_all/imudata/: acc.txt  gyr.txt  timestamps.txt
record_all/lib/: librgbd-grabber-ueye.so.0.9  librgbd-grabber-ueye.so.0.9.7  librgbd-grabber.so.0.9  librgbd-grabber.so.0.9.7
record_all/samples/: UEyeCapture.cpp
record_all/src/camera/: UEye.cpp  ueye_cam_driver.cpp
record_all/videos/: timestamps.txt  timestamps.txt~
record_dataset/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
record_dataset/data/: ueye-conf.ini
record_dataset/lib/: librgbd-grabber-ueye.so.0.9.7  librgbd-grabber.so.0.9.7
record_dataset/samples/: UEyeCapture.cpp
record_dataset/videos/: timestamps.txt  timestamps.txt~
uEyeCalibration/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  calibration  calibration.cpp  cmake_install.cmake  default.xml  out_camera_data.xml
uEyeCalibration/images/uEye1/: uEye1.xml
uEyeCalibration/images/uEye2/: uEye2.xml
xmltest/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  fileread  fileread.cpp  store_config_file.cpp  storefile  test.xml
